--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<script src='file:///C:/Users/user/Desktop/script.js'> </script>
+<script src='https://github.com/VegetableMonk/VegetableMonk.github.io/blob/master/script.js'> </script>
 <style type="text/css">
 
 .test {
